--- a/src/pages/buddychat/buddychat.scss
+++ b/src/pages/buddychat/buddychat.scss
@@ -13,6 +13,31 @@ page-buddychat {
     vertical-align: top;
   }
 
+  .bubblegreen{
+    background-color: #CEF6CE;
+    border-radius: 5px;
+    box-shadow: 0 0 6px #B2B2B2;
+    display: inline-block;
+    padding: 10px 18px;
+    position: relative;
+    vertical-align: top;
+  }
+
+  .bubblegreen::before {
+    background-color: #CEF6CE;
+    content: "\00a0";
+    display: block;
+    height: 16px;
+    position: absolute;
+    top: 11px;
+    transform:             rotate( 29deg ) skew( -35deg );
+    -moz-transform:    rotate( 29deg ) skew( -35deg );
+    -ms-transform:     rotate( 29deg ) skew( -35deg );
+    -o-transform:      rotate( 29deg ) skew( -35deg );
+    -webkit-transform: rotate( 29deg ) skew( -35deg );
+    width:  20px;
+  }
+
   .bubble::before {
     background-color: #F2F2F2;
     content: "\00a0";
@@ -51,4 +76,5 @@ page-buddychat {
   .chatwindow {
     padding-bottom: 70px;
   }
+
 }
