--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -39,7 +39,7 @@ $colors: (
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
-  hcolor:     #03b6b3,
+  hcolor:     #6C00FF,
 );
 
 
