--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -17,4 +17,12 @@ page-profile {
     justify-content: center;
     text-align: center;
   }
+
+  .cordova-camera-select{
+    width: 120px;
+    height: 120px;
+    margin: 20px;
+    position: relative;
+    float: left;
+  }
 }
