addind some examples w/cloudinary (video + images)

--- a/src/pages/passwordreset/passwordreset.scss
+++ b/src/pages/passwordreset/passwordreset.scss
@@ -1,6 +1,6 @@
 page-passwordreset {
   .background {
-    background-image: url('../../assets/imgs/backgroundLogin.jpg');
+    background-image: url('https://res.cloudinary.com/daw2-ulpgc/image/upload/v1524668772/urban_night_5-wallpaper-1920x1200.jpg');
   }
   .scroll-content {
     align-content: center;
