--- a/src/pages/mainpage/mainpage.scss
+++ b/src/pages/mainpage/mainpage.scss
@@ -1,8 +1,5 @@
 page-mainpage {
 
-  .background {
-    background-image: url('../../assets/imgs/backgroundLogin.jpg');
-  }
   .scroll-content {
     align-content: center;
     display: flex;
@@ -63,6 +60,20 @@ page-mainpage {
   .input-cover {
     position: static;
   }
+
+  video {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    transform: translateX(-50%) translateY(-50%);
+  }
+
+
 }
 
 
